tried to fix something. thought it had to do with name

--- a/final project.css
+++ b/final project.css
@@ -36,7 +36,7 @@ a{
   font-family: 'Architects Daughter';
   color: #0033cc
 }
-#list-of-areas{
+#list-of-places-by-areas{
   margin: 25px 50px 75px;
 }
 #bottom {
