--- a/final project.css
+++ b/final project.css
@@ -12,6 +12,44 @@ body  {
 .name-of-place{
   color: black;
 }
+.topnav {
+  background: linear-gradient(to right, #00cc99 0%, #ff99ff 100%);
+    /*background-color: #006699;*/
+    overflow: hidden;
+}
+.topnav a {
+    float: left;
+    display: block;
+    color: #000066;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.topnav a:hover {
+    background-color: #ff33cc;
+    color: black;
+}
+.active {
+    background-color: #cc33ff;
+    color: white;
+}
+.topnav .icon {
+    display: none;
+}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 h1{
   color: White;
   text-align: center;
