--- a/final project.css
+++ b/final project.css
@@ -14,28 +14,28 @@ body  {
 }
 .topnav {
   background: linear-gradient(to right, #00cc99 0%, #ff99ff 100%);
-    /*background-color: #006699;*/
-    overflow: hidden;
+  /*background-color: #006699;*/
+  overflow: hidden;
 }
 .topnav a {
-    float: left;
-    display: block;
-    color: #000066;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+  float: left;
+  display: block;
+  color: #000066;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 .topnav a:hover {
-    background-color: #ff33cc;
-    color: black;
+  background-color: #ff33cc;
+  color: black;
 }
 .active {
-    background-color: #cc33ff;
-    color: white;
+  background-color: #cc33ff;
+  color: white;
 }
 .topnav .icon {
-    display: none;
+  display: none;
 }
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
@@ -49,6 +49,20 @@ body  {
     display: block;
     text-align: left;
   }
+}
+.fb{
+  float: right;
+}
+.fa {
+  padding: 20px;
+  font-size: 60px;
+  width: 50px;
+  /*text-align: right;*/
+  text-decoration: none;
+  border-radius: 50%;
+}
+.fa:hover {
+  opacity: 0.7;
 }
 h1{
   color: White;
@@ -95,4 +109,24 @@ a{
   font-size: 30px;
   text-align: center;
   /*margin: 10px 150px 20px;*/
+}
+.cat{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
+.footer
+{
+  font-family:'Architects Daughter';
+  font-weight: bold;
+  text-align: center;
+  font-size:16px;
+  line-height:40px;
+  background: linear-gradient(to right, #00cc99 0%, #ff99ff 100%);
+  width:100%;
+  color:#000066;
+  left: 0;
+  right: 0;
+  bottom:0;
 }
