--- a/final project.css
+++ b/final project.css
@@ -95,8 +95,8 @@ a{
 #list-of-places-by-areas{
   margin: 25px 50px 75px;
 }
-#form{
-  text-align: center;
+.form{
+  width:100%;
 }
 #bottom {
   font-family:'Architects Daughter';
@@ -110,7 +110,8 @@ a{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 65%;
+  width: 100%;
+  MARGIN-BOTTOM: -7%;
 }
 .footer
 {
